--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ PyMsgBox==1.0.9
 pyperclip==1.9.0
 PyRect==0.2.0
 PyScreeze==1.0.1
+python-dotenv==1.0.0
 pytweening==1.2.0
 pywhatkit==5.4
 razorpay==1.4.2
