--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ click==8.1.8
 colorama==0.4.6
 crispy-bootstrap5==2025.4
 distlib==0.3.9
+dj-database-url==3.0.0
 Django==5.1.6
 django-crispy-forms==2.4
 djangorestframework==3.16.0
 Faker==37.3.0
 filelock==3.18.0
 Flask==3.1.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -34,7 +36,7 @@ PyMsgBox==1.0.9
 pyperclip==1.9.0
 PyRect==0.2.0
 PyScreeze==1.0.1
-python-dotenv==1.0.0
+python-dotenv==1.1.0
 pytweening==1.2.0
 pywhatkit==5.4
 razorpay==1.4.2
