--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
       {
         "src": "api/index.py",
         "use": "@vercel/python"
+      },
+      {
+        "src": "static/**",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
@@ -19,6 +23,10 @@
         "src": "/(.*)",
         "dest": "api/index.py"
       }
-    ]
-  }
+    ],
+    "env": {
+      "PYTHONPATH": ".",
+      "DJANGO_SETTINGS_MODULE": "Zeno.settings"
+    }
+}
   
