--- a/vercel.json
+++ b/vercel.json
@@ -1,34 +1,25 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "api/index.py",
-        "use": "@vercel/python"
-      },
-      {
-        "src": "static/**",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/media/(.*)",
-        "dest": "/media/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/api/index.py"
-      }
-    ],
-    "env": {
-      "PYTHONPATH": ".",
-      "DJANGO_SETTINGS_MODULE": "Zeno.settings",
-      "ALLOWED_HOSTS": ".vercel.app",
-      "DEBUG": "False"
+  "version": 2,
+  "builds": [
+    {
+      "src": "Zeno/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "staticfiles_build" }
     }
+  ],
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "Zeno/wsgi.py"
+    }
+  ]
 }
-  
