--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-
-Django==4.2.7
-whitenoise==6.6.0
-razorpay==1.4.1
-Pillow==10.1.0
-python-decouple==3.8
-psycopg2-binary==2.9.9
+Django>=4.2,<5.0
+whitenoise>=6.0
+razorpay>=1.4.0
+Pillow>=10.0
+python-decouple>=3.8
+psycopg2-binary>=2.9
+dj-database-url>=2.0
