--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,53 @@
-Django>=4.2,<5.0
-whitenoise>=6.0
-razorpay>=1.4.0
-Pillow>=10.0
-python-decouple>=3.8
-psycopg2-binary>=2.9
-dj-database-url>=2.0
+asgiref==3.8.1
+beautifulsoup4==4.13.3
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+chmod==0.0.8
+click==8.1.8
+colorama==0.4.6
+crispy-bootstrap5==2025.4
+distlib==0.3.9
+dj-database-url==3.0.0
+Django==5.1.6
+django-crispy-forms==2.4
+djangorestframework==3.16.0
+Faker==37.3.0
+filelock==3.18.0
+Flask==3.1.0
+gunicorn==23.0.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mock==5.2.0
+MouseInfo==0.1.3
+packaging==25.0
+payment==0.0.1.2
+pdfkit==1.0.0
+pillow==11.1.0
+pipenv==2025.0.2
+platformdirs==4.3.8
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+python-dotenv==1.1.0
+pytweening==1.2.0
+pywhatkit==5.4
+razorpay==1.4.2
+requests==2.32.3
+setuptools==80.3.1
+soupsieve==2.6
+sqlparse==0.5.3
+typing_extensions==4.13.0
+tzdata==2025.1
+urllib3==2.3.0
+virtualenv==20.31.2
+Werkzeug==3.1.3
+whitenoise==6.9.0
+wikipedia==1.4.0
