--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 chmod==0.0.8
 click==8.1.8
+cloudinary==1.44.0
 colorama==0.4.6
 crispy-bootstrap5==2025.4
 distlib==0.3.9
 dj-database-url==3.0.0
 Django==5.1.6
+django-cloudinary-storage==0.3.0
 django-crispy-forms==2.4
 djangorestframework==3.16.0
 Faker==37.3.0
@@ -43,6 +45,7 @@ pywhatkit==5.4
 razorpay==1.4.2
 requests==2.32.3
 setuptools==80.3.1
+six==1.17.0
 soupsieve==2.6
 sqlparse==0.5.3
 typing_extensions==4.13.0
@@ -52,6 +55,3 @@ virtualenv==20.31.2
 Werkzeug==3.1.3
 whitenoise==6.9.0
 wikipedia==1.4.0
-Django==5.1.6
-dj-database-url
-whitenoise
